--- a/static/client.html
+++ b/static/client.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="socket.io.min.js"></script>
-    <script type="text/javascript" src="client.js"></script>
+    <script type="text/javascript" src="/jquery.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/client.js"></script>
     <script>var client; $(function() { client = new Client(); });</script>
 </head>
 <body>
