--- a/static/client.html
+++ b/static/client.html
@@ -17,7 +17,7 @@
         </select>
     </div>
     <div id="buttons">
-        <input type="button" id="connect" value="Connect" default>
+        <input type="button" id="rewire" value="Rewire" default>
     </div>
 
     <div id="ui">
